--- a/.github/workflows/auth_api.yml
+++ b/.github/workflows/auth_api.yml
@@ -43,7 +43,8 @@ jobs:
 
     - name: Lint with pylint
       run: |
-        pylint src | pylint-json2html -o reports/src/pylint/pylint.html
+        pylint src || pylint src --output-format=pylint_report.CustomJsonReporter --load-plugins = "pylint_report"  | pylint_report > reports/src/pylint/report.html | false
+
 
     - name: Check typing with mypy
       run: |
