--- a/.github/workflows/auth_api.yml
+++ b/.github/workflows/auth_api.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint mypy lxml pylint-json2html
+        pip install pylint mypy lxml pylint-report
         poetry install
 
     - name: Create directories
@@ -43,7 +43,8 @@ jobs:
 
     - name: Lint with pylint
       run: |
-        pylint src || pylint src --output-format=pylint_report.CustomJsonReporter --load-plugins = "pylint_report"  | pylint_report > reports/src/pylint/report.html | false
+        pylint src || pylint src --output-format=pylint_report.CustomJsonReporter --load-plugins = "pylint_report"  |
+        pylint_report > reports/src/pylint/report.html | false
 
 
     - name: Check typing with mypy
