--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-toml
       - id: check-added-large-files
-      - id: name-tests-test
+      - id: name-tests-tests
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.940'
