--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,30 @@ version = "0.1.0"
 description = ""
 authors = ["DK <d.kachkin@tnxholding.com>"]
 readme = "README.md"
+packages = [{include = "hse_mlops_hw"}]
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pylint-report = "^2.4.0"
+hydra-core = "^1.3.2"
+fire = "^0.5.0"
+torch = "^2.1.2"
+lightning = "^2.1.3"
+transformers = "^4.36.2"
+scikit-learn = "^1.3.2"
+pillow = "^10.1.0"
+torchtext = "^0.16.2"
+torchvision = "^0.16.2"
+mlflow = "^2.9.2"
+psycopg2-binary = "^2.9.9"
+rich = "^13.7.0"
+psutil = "^5.9.7"
+timm = "^0.9.12"
 
+
+
+[tool.poetry.scripts]
+greet = "hse_mlops_hw.cmd.test:cli"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
@@ -16,9 +35,11 @@ pre-commit = "^3.5.0"
 pylint = "^3.0.2"
 isort = "^5.12.0"
 mypy = "^1.7.1"
-pylint-json2html = "^0.5.0"
+pylint-report = "^2.4.0"
+flake8 = "^6.1.0"
 
 [tool.black]
+line_length = 88
 exclude = '''
 /(
     \.git
@@ -82,6 +103,9 @@ disable = [
     "missing-docstring",
     "too-few-public-methods",
     "too-many-arguments",
+    "import-error",
+    "arguments-differ",
+    "R0801"
 ]
 
 
