--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,33 +1,32 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+-   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-toml
-      - id: check-added-large-files
-      - id: name-tests-tests
+    -   id: trailing-whitespace  # убирает лишние пробелы
+    -   id: check-added-large-files  # проверяет тяжелые файлы на изменения
+    -   id: end-of-file-fixer  # добавляет пустую строку в конце файла
+    -   id: check-yaml  # проверяет синтаксис .yaml файлов
+    -   id: check-json  # проверяет синтаксис .json файлов
+    -   id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
+    -   id: check-merge-conflict
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.940'
-    hooks:
-      - id: mypy
-        args: [ --ignore-missing-imports ]
-        exclude: tests
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+-   repo: https://github.com/pycqa/isort
+    rev: 5.13.2
     hooks:
       - id: isort
+        exclude: __init__.py
         args: [ --profile, black, --filter-files ]
 
-  - repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-      - id: black
-        language_version: python3
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: '3.9.2'
+-   repo: https://github.com/PyCQA/flake8
+    rev: 6.1.0
     hooks:
-      - id: flake8
+    -   id: flake8
+        exclude: __init__.py
+        args: [ "--ignore=E501,F821" ]
+
+-   repo: https://github.com/psf/black
+    rev: 23.12.1
+    hooks:
+    - id: black
+      language_version: python3.10
