--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-[mlflow]
 MLFLOW_S3_ENDPOINT_URL=http://minio-container:9000
 MLFLOW_TRACKING_URI=postgresql://test:test@postgres:5432/mlflow
 
-[postgres]
 POSTGRES_DB=mlflow
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+
+TENSORBOARD_LOGS_DIR=data/logs/tensorboard
+TENSORBOARD_SCALAR_LOGS=True
+TENSORBOARD_IMAGES_DISPLAY=True
+TENSORBOARD_CONFUSION_MATRIX=True
