--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,34 +4,34 @@ version = "0.1.0"
 description = ""
 authors = ["DK <d.kachkin@tnxholding.com>"]
 readme = "README.md"
-packages = [{include = "hse_mlops_hw"}]
+packages = [{ include = "hse_mlops_hw" }]
 
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu121"
+priority = "supplemental"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+torch = "2.1.0+cu121"
+torchtext = "0.16.0"
+torchvision = "0.16.0+cu121"
 hydra-core = "^1.3.2"
-fire = "^0.5.0"
-torch = "^2.1.2"
-lightning = "^2.1.3"
+lightning = "~2.1.2"
 transformers = "^4.36.2"
-scikit-learn = "^1.3.2"
 pillow = "^10.1.0"
-torchtext = "^0.16.2"
-torchvision = "^0.16.2"
 mlflow = "^2.9.2"
 psycopg2-binary = "^2.9.9"
 rich = "^13.7.0"
 psutil = "^5.9.7"
 timm = "^0.9.12"
 tensorboard = "^2.15.1"
-overrides = "^7.4.0"
-bfloat16 = "^1.2.0"
+dvc = "^3.38.1"
+dvc-gdrive = "^3.0.1"
+fire = "^0.5.0"
 
 
 
-[tool.poetry.scripts]
-train = "your_module.command:train"
-infer = "your_module.command:infer"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
@@ -41,6 +41,10 @@ isort = "^5.12.0"
 mypy = "^1.7.1"
 pylint-report = "^2.4.0"
 flake8 = "^6.1.0"
+
+[tool.poetry.scripts]
+train = "hse_mlops_hw.train:train"
+infer = "hse_mlops_hw.infer:infer"
 
 [tool.black]
 line_length = 88
