--- a/configs/artifacts/base_artifacts.yaml
+++ b/configs/artifacts/base_artifacts.yaml
@@ -1,10 +1,10 @@
 experiment_name: example-experiment
-tracking_uri: postgresql://test:test@localhost:5432/mlflow
+tracking_uri: http://localhost:5000
 checkpoint:
-  use: False
-  dirpath: data
+  use: True
+  dirpath: checkpoints
   filename: "{epoch:02d}-{val_loss:.4f}"
   monitor: val_loss
   save_top_k: 3
-  every_n_train_steps:
+  every_n_train:
   every_n_epochs: 1
