--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "hse-mlops-hw"
 version = "0.1.0"
 description = ""
-authors = ["DK <d.kachkin@tnxholding.com>"]
+authors = ["DK <kachkindmitry@gmail.com>"]
 readme = "README.md"
 packages = [{ include = "hse_mlops_hw" }]
 
@@ -29,9 +29,6 @@ tensorboard = "^2.15.1"
 dvc = "^3.38.1"
 dvc-gdrive = "^3.0.1"
 fire = "^0.5.0"
-
-
-
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
